@@ -4,7 +4,7 @@ Dist::Zilla::Plugin::if - Load a plugin only if a condition is true
 
 # VERSION
 
-version 0.001001
+version 0.002000
 
 # SYNOPSIS
 
