@@ -1,4 +1,10 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-0.001001
+0.002000
+ [Added / runtime requires]
+ - Dist::Zilla::Role::PluginLoader::Configurable
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Role::PrereqSource
+ - MooX::Lsub
 
