@@ -1,4 +1,4 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001001
+0.002000
 
